--- a/0x00-Webpack/task_3/package.json
+++ b/0x00-Webpack/task_3/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "start-dev": "webpack-dev-server"
+  }
+
+{
   "name": "task_3",
   "version": "1.0.0",
   "description": "",
