--- a/0x00-Webpack/task_3/package.json
+++ b/0x00-Webpack/task_3/package.json
@@ -1,24 +1,29 @@
 {
-  "scripts": {
-    "start-dev": "webpack-dev-server"
-  }
-
-{
-  "name": "task_3",
+  "name": "task_1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "start-dev": "webpack-dev-server --open"
   },
   "keywords": [],
-  "author": "",
+  "author": "David Peralta",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "image-webpack-loader": "^8.0.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21"
   }
 }
