--- a/0x01-react_intro/task_4/dashboard/package.json
+++ b/0x01-react_intro/task_4/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Vee-nimation.github.io/alx-react",
+  "homepage": "https://vee-nimation.github.io/alx-react/",
   "name": "dashboard",
   "version": "0.1.0",
   "private": true,
